--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "noUnusedParameters": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "types": ["node", "jest"],
+    "types": ["node"],
     "target": "es5",
     "lib": ["es2015", "dom"],
     "sourceMap": true,
