--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "html-transformer",
+  "name": "@acs/html-transformer",
   "description": "基于 html2canvas 实现 html 向编辑器数据的转换",
   "version": "0.0.0",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/types/index.d.ts",
-  "browser": "dist/index.js",
+  "main": "src/index.ts",
   "files": [
     "dist/"
   ],
   "scripts": {
     "prebuild": "rimraf dist/ && rimraf build/ && mkdirp dist && mkdirp build",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && npm run build:minify",
-    "build:minify": "uglifyjs --compress --comments /^!/ -o dist/index.min.js --mangle -- dist/index.js",
     "release": "standard-version",
     "format": "prettier --write \"{src,scripts}/**/*.ts\"",
     "lint": "eslint src/**/*.ts --max-warnings 0",
@@ -22,6 +17,8 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "@acs/slate": "workspace:*",
+    "@acs/renderer": "workspace:*",
     "css-line-break": "^2.1.0",
     "text-segmentation": "^1.0.3"
   },
